set font-size back to default instead of 80%, added firebug theme to high DPI, fixed Services.appinfo.OS string expectations, fixing useless whitespace

--- a/devtools/client/jsonview/css/main.css
+++ b/devtools/client/jsonview/css/main.css
@@ -25,7 +25,6 @@
 
 /* The tree takes the entire horizontal space within the panel content. */
 .panelContent .treeTable {
-  font-size: 80%;
   width: 100%;
   font-family: var(--monospace-font-family);
 }
